# fmplay

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
clips/: README.md
clips/recipes/: biebrza-broadcast.txt  biebrza_broadcast.py  jan_heweliusz_mayday.py
docs/: CODEX.md  close-mic.md  cockpit-audio-simulation.md  jan_heweliusz_mayday.md  squelch-sound-library.md
scripts/: biebrza-whisper-bench.py
src/fmplay/: __init__.py  backends.py  cli.py  close_mic.py  libgsm.py  libgsm_stream.py  marine_vhf_stream.py  profiles.py  spectrogram.py  stages.py
tests/: test_backends.py  test_cli.py  test_close_mic.py  test_marine_vhf_stream.py  test_profiles.py  test_spectrogram.py
tools/: close_mic_collect.py  close_mic_validate.py  squelch_extract.py  squelch_match_train6.py  squelch_validate.py
