[project]
name = "fmplay"
version = "0.1.0"
description = "Preview audio through playback and degradation profiles."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Maciej Bilas" },
]
dependencies = []

[project.scripts]
fmplay = "fmplay.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
